--- a/ForretasAPITester/Views/Shared/_Layout.cshtml
+++ b/ForretasAPITester/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="UpdateProducts" asp-action="Index">Test updating products</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Search" asp-action="Index">Test searching</a>
+                        </li>
                         @if (User != null && User.Claims != null && User.Claims.FirstOrDefault(c => c.Type == System.Security.Claims.ClaimTypes.Name) != null)
                         {
                             <li class="nav-item" style="padding-left:200px;padding-top:7px;">
