Implementation of testing UI for API /update_by_id endpoint

--- a/ForretasAPITester/Views/UpdateProducts/Index.cshtml
+++ b/ForretasAPITester/Views/UpdateProducts/Index.cshtml
@@ -66,7 +66,7 @@
                         <button type="submit" class="btn btn-info" asp-action="SendInactivateRequest">Inativar</button>
                     </td>
                     <td>
-                        <button type="submit" class="btn btn-info" asp-action="SendUpdateRequest">Atualizar</button>
+                        <button type="submit" class="btn btn-info" asp-action="SendUpdateRequest">Atualizar</button> &nbsp;&nbsp; <button type="submit" class="btn btn-info" asp-action="SendUpdateByIdRequest">Atualizar por Id</button>
                     </td>
                 </tr>
             </table>
